This fixes the legend display bug previously fixed, but doesn't break in safari.  More better.

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -264,8 +264,7 @@ a.feed-icon { float:right; height:19px;}
 #serviceDescription {padding-right:5px;}
 #serviceRegion {padding-left:5px;}
 #legend-bar {padding-left:30px;}
-#legend-bar li {display:table-cell; vertical-align:middle;}
-#legend-bar li > * {padding:5px 5px 5px 0;}
+#legend-bar li {display:inline-block;}
 #legend-bar li p.icon {
     background-image:url('/images/icons-sprite.gif');
     background-repeat:no-repeat;
